# toolshed

./: .gitattributes  .gitignore  README.md  session_backup.sh
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  epic.md  ticket.md
.github/workflows/: codeql.yml  validate-issue.yml
FileMapper/: .gitignore  mapping.example.yml  mapping.yml  pyproject.toml
FileMapper/src/: filemapper.py
FileMover/: config.example.yml  config.yml  pyproject.toml
FileMover/src/: filemover.py
GDriveTools/: .env.example  .gitignore  config.example.yml  config.yml  pyproject.toml
GDriveTools/src/: auth.py  gdrive.py  gdrive_analyze.py  gdrive_backup.sh
GmailTools/: .env.example  .gitignore  config.example.yml  config.yml  pyproject.toml  requirements.txt
GmailTools/src/: actions.py  auth.py  classifier.py  gmailtools.py  rules.py  runner.py
GmailTools/tests/: test_actions.py  test_classifier.py  test_rules.py  test_runner.py
SLOBSTools/: config.example.yml  config.yml
SLOBSTools/src/: slobs_vod_backup.sh
TraktorProTools/: config.example.yml  config.yml
TraktorProTools/src/: convert_m4a_to_flac.py  fix_traktor_collection.py  load_config.sh  traktor_backup.sh  traktor_bundle.sh  traktor_cleanup.sh  traktor_recordings_backup.sh  traktor_sync.sh
