[tool.poetry]
name = "gdrivetools"
version = "0.1.0"
description = "Google Drive automation: rclone backup and Drive API v3 analysis/ops tools."
authors = ["Blair Gemmer <blairg23@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
google-auth = ">=2.0"
google-auth-oauthlib = ">=1.0"
google-api-python-client = ">=2.0"
python-dotenv = ">=1.0"
