[tool.poetry]
name = "gmailtools"
version = "0.1.0"
description = "Gmail label automation tool"
authors = ["blairg23 <blairg23@gmail.com>"]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
google-auth = ">=2.0"
google-auth-oauthlib = ">=1.0"
google-api-python-client = ">=2.0"
ruamel-yaml = ">=0.18"
requests = ">=2.31"
python-dotenv = ">=1.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"

[tool.poetry.scripts]
gmailtools = "src.gmailtools:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
